fixed text transation and list overflow  in How-to-start section and added formvalidation with formik and yup

--- a/src/components/form/form.module.scss
+++ b/src/components/form/form.module.scss
@@ -37,6 +37,29 @@
 			color: $primary_white;
 			opacity: 0.4;
 		}
+
+		&:-webkit-autofill,
+		&:-webkit-autofill:hover,
+		&:-webkit-autofill:focus,
+		&:-webkit-autofill:active {
+			box-shadow: inset 5rem 5rem 0px 5rem $dark_blue;
+			-webkit-text-fill-color: $primary_white;
+		}
+	}
+
+	.input_border_error {
+		border: 0.1rem solid $error;
+
+		transition: $hover_transition;
+	}
+
+	.form__input_text_error {
+		position: absolute;
+		left: 0;
+		top: -1.6rem;
+
+		font-size: 1.4rem;
+		color: $error;
 	}
 
 	.btn {
@@ -91,6 +114,29 @@
 			color: $primary_white;
 			opacity: 0.4;
 		}
+
+		&:-webkit-autofill,
+		&:-webkit-autofill:hover,
+		&:-webkit-autofill:focus,
+		&:-webkit-autofill:active {
+			box-shadow: inset 5rem 5rem 0px 5rem $blue3;
+			-webkit-text-fill-color: $primary_white;
+		}
+	}
+
+	.input_border_error {
+		border: 0.1rem solid $error;
+
+		transition: $hover_transition;
+	}
+
+	.form__input_text_error {
+		position: absolute;
+		left: 0;
+		top: -1.6rem;
+
+		font-size: 1.4rem;
+		color: $error;
 	}
 
 	.btn {
@@ -145,6 +191,29 @@
 			color: $primary_white;
 			opacity: 0.4;
 		}
+
+		&:-webkit-autofill,
+		&:-webkit-autofill:hover,
+		&:-webkit-autofill:focus,
+		&:-webkit-autofill:active {
+			box-shadow: inset 5rem 5rem 0px 5rem $blue3;
+			-webkit-text-fill-color: $primary_white;
+		}
+	}
+
+	.input_border_error {
+		border: 0.1rem solid $error;
+
+		transition: $hover_transition;
+	}
+
+	.form__input_text_error {
+		position: absolute;
+		left: 0;
+		top: -1.6rem;
+
+		font-size: 1.4rem;
+		color: $error;
 	}
 
 	.btn {
@@ -158,6 +227,72 @@
 
 		.button_title {
 			z-index: 2;
+		}
+	}
+}
+
+.form__preloader_wrapper {
+	position: absolute;
+	left: 50%;
+	top: -1.6rem;
+
+	display: flex;
+
+	height: 1.3rem;
+	width: 7rem;
+
+	transform: translate(-50%, 0);
+
+	.form__preloader {
+		display: inline-block;
+		position: relative;
+	}
+	.form__preloader div {
+		position: absolute;
+		width: 13px;
+		height: 13px;
+		border-radius: 50%;
+		background: $blue;
+		animation-timing-function: cubic-bezier(0, 1, 1, 0);
+	}
+	.form__preloader div:nth-child(1) {
+		left: 8px;
+		animation: lds-ellipsis1 0.6s infinite;
+	}
+	.form__preloader div:nth-child(2) {
+		left: 8px;
+		animation: lds-ellipsis2 0.6s infinite;
+	}
+	.form__preloader div:nth-child(3) {
+		left: 32px;
+		animation: lds-ellipsis2 0.6s infinite;
+	}
+	.form__preloader div:nth-child(4) {
+		left: 56px;
+		animation: lds-ellipsis3 0.6s infinite;
+	}
+	@keyframes lds-ellipsis1 {
+		0% {
+			transform: scale(0);
+		}
+		100% {
+			transform: scale(1);
+		}
+	}
+	@keyframes lds-ellipsis3 {
+		0% {
+			transform: scale(1);
+		}
+		100% {
+			transform: scale(0);
+		}
+	}
+	@keyframes lds-ellipsis2 {
+		0% {
+			transform: translate(0, 0);
+		}
+		100% {
+			transform: translate(24px, 0);
 		}
 	}
 }
