--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -11,6 +11,7 @@ $dark_blue: #201A4F;
 $purpure: #6A54FF;
 $green: #35FF9E;
 $grey: #A5AEBC;
+$error: rgb(255, 53, 53);
 //------------------------------colors------------------------------//
 
 
